[WIP] Refactored lombok specific codes and added websocket implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=zappy
 spring.main.banner-mode=off
+spring.threads.virtual.enabled=true
 
 # multicast settings
 multicast.addr=230.0.0.1
@@ -9,5 +10,6 @@ multicast.no_response_timeout=9000
 
 logging.include-application-name=false
 logging.level.root=warn
-logging.level.org.springframework.web=error
+logging.level.org.springframework.web=debug
+#logging.level.org.springframework.beans.factory=DEBUG => to log bean creation & destruction
 logging.level.org.hibernate=error
