--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,20 @@ spring.application.name=zappy
 spring.main.banner-mode=off
 spring.threads.virtual.enabled=true
 
+server.address=192.168.0.105
+server.port=8080
+
 # multicast settings
 multicast.addr=230.0.0.1
 multicast.port=4446
-multicast.announce_interval=3000
-multicast.no_response_timeout=9000
+multicast.announce_interval=10000
+multicast.no_response_timeout=30000
+
+secret.key=!5cr7nEsplg@bOpls8Hifroch?b$pav7
 
 logging.include-application-name=false
 logging.level.root=warn
-logging.level.org.springframework.web=debug
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.web.SimpLogging=INFO
 #logging.level.org.springframework.beans.factory=DEBUG => to log bean creation & destruction
 logging.level.org.hibernate=error
